<resources>
    <string name="app_name">Just Java</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="name">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="decrement">-</string>
    <string name="_2">2</string>
    <string name="Increment">+</string>
    <string name="max_cups_toast">The maximum number of coffee cups has been reached!</string>
    <string name="min_cups_toast">The minimum number of coffee cups has been reached!</string>
    <string name="subject">JustJava order for</string>
    <string name="order_summary_name">Name:</string>
    <string name="order_summary_whipped_cream">Add whipped cream?</string>
    <string name="order_summary_chocolate">Add chocolate?</string>
    <string name="order_summary_quantity">Quantity:</string>
    <string name="order_summary_total">Total: $</string>
    <string name="order_summary_greeting">Thank You !</string>
</resources>
